fix #2696 aligned style of map rotation tool for ol

--- a/web/client/themes/default/less/ol.less
+++ b/web/client/themes/default/less/ol.less
@@ -115,3 +115,24 @@ div.ol-scale-line-inner {
         border-top-color: #ffcc33;
     }
 }
+
+.ol-rotate {
+    width: @square-btn-size;
+    height: @square-btn-size;
+    background: none;
+    margin-right: 7px;
+    .ol-rotate-reset {
+        box-shadow: -1px 1px 5px 1px #5e5e5e;
+        height: @square-btn-size;
+        width: @square-btn-size;
+        color: @ms2-color-text-primary;
+        background-color: @ms2-color-primary;
+        border-color: @btn-primary-border;
+        .ol-compass {
+            font-size: 36px;
+        }
+    }
+    .ol-rotate-reset:hover {
+        background-color: darken(@ms2-color-primary, 5%);
+    }
+}
